     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen, or if the `mibs=auto` detection only found the fallback
     IETF mapping. [PR #3095]

 - `tripplite_usb` driver updates:
   * Added support for Tripplite protocol 3017 (mostly ASCII). [issue #2258,
     PR #3093]
   * Fixed default `unit_id`, apparently broken by changes in NUT v2.8.1.
     [issue #3191, PR #3192]

 - `tripplitesu` driver updates:
   * Added configurable command delay to prevent read timeouts. [PR #3273]

 - Introduced a new NUT driver named `nut-upower` which provides support
   for monitoring UPS and battery devices managed by the UPower daemon
   via D-Bus. This also introduces a new category of drivers that talk to
   operating system services to obtain power state information. [PR #3279]

 - `usbhid-ups` driver updates:
   * Declared support for APC with USB ID `051d:0005` (details may evolve
     as the devices become better known). [issue #3047, PR #3081]
   * Extended iDowell subdriver with data points for GoldenMate UPS using
     LiFePO4 batteries (tested with GoldenMate LIPO 1500VA/1000W).
     [issue #3015, PR #3265]
   * Improved support for Eaton 5S1500LCD and 5S1600LCD (US version). [#2380]
   * The driver used to report `CHRG` status if the device was not "fully
     charged", however the latter status was only queried and reported by
     some (not all) subdrivers and probably not by all devices out in the
     field. Now we fall back to check that if the "fully charged" status
     is not defined at all, consider the `battery.charge` value (100 or not).
     [issue #3146]
   * For `ups.status` processing, do not assume that `!online`==`offline`,
     it may well be that the device just did not report anything (e.g. if
     it does not really talk USB HID). [#3080]