@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3646 utf-8
+personal_ws-1.1 en 3647 utf-8
 AAC
 AAS
 ABI
@@ -1473,6 +1473,7 @@ Valderen
 Vdc
 Velloso
 VendorID
+Vertiv
 Viewpower
 Viewsonic
 Viktor
